# suya

./: CMakeLists.txt  README.md
src/: main.cpp
src/board/: FEN.cpp  FEN.h  board.cpp  board.h
src/movegen/: MoveGenerator.cpp  MoveGenerator.h
src/utils/: utils.cpp  utils.h
